# tritoolkit

./: .buildinfo  .gitignore  CONTRIBUTING.html  README.md  change-log.html  conftest.py  genindex.html  getting_started.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yaml
_sources/: CONTRIBUTING.md.txt  change-log.rst.txt
_sources/reference/: api.rst.txt
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/reference/: geography.rst  index.rst
reference/: api.html  geography.html  index.html
src/tritoolkit/: __init__.py  __version__.py  geography.py  utilities.py
src/tritoolkit/api/: __init__.py  core.py  exceptions.py
tests/: test_api.py  test_geography.py
tests/cassettes/test_api/: test_submit_extract_live.yaml  test_table_filter_on_multiple_values.yaml  test_table_filter_on_single_value.yaml
tests/cassettes/test_geography/: test_geocode_from_raw_address.yaml  test_geocode_wrapper.yaml  test_geocoder_wrapper.yaml
tests/fixtures/: chem_info_dlc.pkl  dlc_facilities.pkl  dlc_facilities_geo.pkl  facilities_dlc_2017_2021.pkl  facilities_list.pkl  nd_counties_facilities.pkl  nd_facilities_geo.pkl  reporting_forms_dlc_2021.pkl
